--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,69 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 html, body {
-  margin: 20px;
+  margin: 5px;
+  margin-right: 120px;
+  margin-left: 120px;
+  background: #222222;
+}
+
+.add {
+  display: block;
+  float: right;
+  width: 49%;
+  min-height: 100px;
+  padding: 20px;
+  background: #2b2b2b;
+  color: white;
+  margin-bottom: 20px;
+}
+
+textarea {
+  display: block;
+  float: left;
+  width: 49%;
+  min-height: 100px;
+  padding: 20px;
+  border: 1px solid black;
+  margin-bottom: 20px;
+}
+
+textarea:focus {
+  outline: none;
+  border: 2px solid red;
+}
+
+button {
+  padding: 5px;
+  float: right;
+  background: #222222;
+  color: white;
+  border: 1px solid white;
+}
+
+button:focus {
+  outline: none;
+  border: 2px solid red;
+}
+
+.view {
+  overflow: hidden;
+  display: block;
+  float: left;
+  padding: 20px;
+  min-height: 100px;
+  background: #2b2b2b;
+  width: 49%;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.view:nth-of-type(even) {
+  margin-left: 19px;
+}
+
+hr {
+  width: 100%;
 }
