--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,13 +10,17 @@ html, body {
 }
 
 textarea {
+  clear: both;
   display: block;
   float: left;
   width: 49%;
   min-height: 100px;
   padding: 20px;
   border: 1px solid black;
-  margin-bottom: 20px;
+}
+
+.title-field {
+  min-height: 20px;
 }
 
 textarea:focus {
