--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -4,8 +4,8 @@
 
 html, body {
   margin: 5px;
-  margin-right: 120px;
-  margin-left: 120px;
+  margin-right: 10%;
+  margin-left: 10%;
   background: #222222;
 }
 
@@ -62,7 +62,7 @@ hr {
   padding: 20px;
   min-height: 100px;
   background: #2b2b2b;
-  width: 49%;
+  width: 48.9%;
   margin-bottom: 20px;
   color: white;
 }
