--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -9,11 +9,12 @@ html, body {
   background: #222222;
 }
 
+
 textarea {
   clear: both;
   display: block;
   float: left;
-  width: 49%;
+  width: 100%;
   min-height: 100px;
   padding: 20px;
   border: 1px solid black;
@@ -29,11 +30,23 @@ textarea:focus {
   border: 2px solid red;
 }
 
+.note-field {
+  display: block;
+  float: left;
+  width: 49%;
+  min-height: 150px;
+  padding: 20px;
+  background: #2b2b2b;
+  color: white;
+  margin-bottom: 20px;
+}
+
 .add {
   display: block;
+  word-wrap: break-word;
   float: right;
   width: 49%;
-  min-height: 100px;
+  min-height: 207px;
   padding: 20px;
   background: #2b2b2b;
   color: white;
@@ -70,4 +83,8 @@ hr {
 
 .view:nth-of-type(even) {
   margin-left: 19px;
+}
+
+dd.flash_messages-content {
+  color:white;
 }
